force-app/main/default/objects/vlocity_ins__InsuranceNonHeldPolicy__c/fields/vlocity_ins__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>NonHeldPolicies</relationshipName>
    <type>Lookup</type>
</CustomField>