force-app/main/default/objects/vlocity_ins__InsuranceNonHeldPolicy__c/fields/vlocity_ins__PolicyType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyType__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD&amp;D</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Boatowners</fullName>
            </value>
            <value>
                <fullName>Business Owners</fullName>
            </value>
            <value>
                <fullName>Condominium</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>Equity−indexed annuity</fullName>
            </value>
            <value>
                <fullName>Fixed Annuity</fullName>
            </value>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Homeowners</fullName>
            </value>
            <value>
                <fullName>Inland Marine</fullName>
            </value>
            <value>
                <fullName>Ocean Marine</fullName>
            </value>
            <value>
                <fullName>Permanent Life</fullName>
            </value>
            <value>
                <fullName>Pers/Scheduled Property</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Renters</fullName>
            </value>
            <value>
                <fullName>Term Life</fullName>
            </value>
            <value>
                <fullName>Umbrella Liability</fullName>
            </value>
            <value>
                <fullName>Unit Linked Life</fullName>
            </value>
            <value>
                <fullName>Universal Life</fullName>
            </value>
            <value>
                <fullName>Universal Variable Life</fullName>
            </value>
            <value>
                <fullName>Variable Annuity</fullName>
            </value>
            <value>
                <fullName>Variable Life</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>